--- a/app/views/treasuries/bio.html.erb
+++ b/app/views/treasuries/bio.html.erb
@@ -13,7 +13,17 @@
     <h3 id="collection-background">Collection Summary</h3>
 
     <p>
-      <img align="right" class="treasury-bio-image" src="https://s3.amazonaws.com/openvault.wgbh.org/treasuries/AndyAndLinda2.jpg">
+<!--       <div class="treasury-bio-image" align="right">
+        <img src="https://s3.amazonaws.com/openvault.wgbh.org/treasuries/AndyAndLinda2.jpg">
+        
+        <div style="position: absolute; bottom: 0px; font-size: 10px;">
+          Linda and Andrew Egendorf 
+          Courtesy Andrew Egendorf / Stanley Rose
+        </div>
+      </div> -->
+
+      <img class="treasury-bio-image" align="right" src="https://s3.amazonaws.com/openvault.wgbh.org/treasuries/AndyAndLinda2.jpg">
+
 
       <em>Masterpiece Theatre</em> began in 1971 as a partnership between WGBH and the BBC and other producers. In 2019 Andrew Egendorf generously donated to WGBH in honor of his late wife Linda. This gift enabled the Media Library and Archives to digitize episodes of <em>Masterpiece Theatre</em> programs from 1971-1992, Alistair Cooke’s tenure. Materials will be available online when possible and on-site at WGBH as materials are digitized.
     </p>
@@ -38,9 +48,9 @@
       Alistair Cooke was a British-born journalist who worked both in the UK and the US who is known for his work interpreting culture and history for audiences on both sides of the Atlantic. Born in 1908, Cooke began working for the BBC in 1932 as a film critic and later worked as a correspondent for NBC, where he notably reported on Edward VIII’s abdication. Cooke moved to the US in 1937 and became naturalized in 1941 and reported on American perceptions and experiences of World War II. In the post-war years he worked as a correspondent for the <em>Manchester Guardian</em> newspaper and as host of CBS’s educational series <em>Omnibus</em>, his television debut. In 1971 Cooke took on the role for which he remains best known in the US, as host of <em>Masterpiece Theatre</em>. Although he accepted the position hesitantly, Cooke stayed on as host for 22 years, from 1971-1992. His role as host of <em>Masterpiece Theatre</em> spawned many parodies, most notably that of “Alistair Cookie” on <em>Sesame Street</em>, played by Cookie Monster. In 1973, Cooke was awarded an honorary knighthood for his work building Anglo-American understanding, and in 1975 Cooke won an Emmy Award for Outstanding Program and Individual Achievement. After his tenure at <em>Masterpiece Theatre</em>, Cooke continued to host his radio show <em>Letter from America</em>, one of the longest-running radio series at 58 years (1946-2004), until his death on March 30, 2004. After his death, the Fulbright Alistair Cooke Award in Journalism was established.
     </p>
 
-    <p>
-      <img align="right" class="treasury-bio-image" src="https://s3.amazonaws.com/openvault.wgbh.org/treasuries/NEH-Preferred-Seal820.jpg">
-
+    <p>  
+      <img  class="treasury-bio-image" align="right" src="https://s3.amazonaws.com/openvault.wgbh.org/treasuries/NEH-Preferred-Seal820.jpg">
+      
       In 2018, WGBH received a $750,000 challenge grant from the National Endowment for the Humanities <a href="https://www.wgbh.org/foundation/press/wgbh-receives-national-endowment-for-the-humanities-grant-to-support-preservation-of-historic-public-broadcasting-materials">NEH</a> to preserve and digitize the most at-risk items in the WGBH archival collection, specifically 83,000 media resources. This effort will preserve the archive we have built and ensure that future media assets are properly preserved as they are created. The grant calls for a 4:1 match, or $3 million in matching dollars over the next four years.
     </p>
 
