--- a/app/views/treasuries/bio.html.erb
+++ b/app/views/treasuries/bio.html.erb
@@ -22,7 +22,9 @@
         </div>
       </div> -->
 
-      <img class="treasury-bio-image" align="right" src="https://s3.amazonaws.com/openvault.wgbh.org/treasuries/AndyAndLinda2.jpg">
+      <a align="right" class="treasury-bio-image-container" href="#">
+        <img class="treasury-bio-image" src="https://s3.amazonaws.com/openvault.wgbh.org/treasuries/AndyAndLinda2.jpg">
+      </a>
 
 
       <em>Masterpiece Theatre</em> began in 1971 as a partnership between WGBH and the BBC and other producers. In 2019 Andrew Egendorf generously donated to WGBH in honor of his late wife Linda. This gift enabled the Media Library and Archives to digitize episodes of <em>Masterpiece Theatre</em> programs from 1971-1992, Alistair Cooke’s tenure. Materials will be available online when possible and on-site at WGBH as materials are digitized.
