'BIG LOGO GO SMALLLLL'

--- a/app/views/treasuries/bio.html.erb
+++ b/app/views/treasuries/bio.html.erb
@@ -3,7 +3,7 @@
 
   <div class="row treasury-title">
     <h1>
-      The Linda and Andrew Egendorf Masterpiece Theatre Alistair Cooke Collection Summary
+      The Linda and Andrew Egendorf Masterpiece Theatre Alistair Cooke Collection
     </h1>
     <a class="treasury-back-link" href="/collections/alistair-cooke">Return to Alistair Cooke Masterpiece Collection</a>
   </div>
@@ -51,7 +51,7 @@
     </p>
 
     <p>  
-      <img  class="treasury-bio-image" align="right" src="https://s3.amazonaws.com/openvault.wgbh.org/treasuries/NEH-Preferred-Seal820.jpg">
+      <img class="treasury-neh-image" align="right" src="https://s3.amazonaws.com/openvault.wgbh.org/treasuries/NEH-Preferred-Seal820.jpg">
       
       In 2018, WGBH received a $750,000 challenge grant from the National Endowment for the Humanities <a href="https://www.wgbh.org/foundation/press/wgbh-receives-national-endowment-for-the-humanities-grant-to-support-preservation-of-historic-public-broadcasting-materials">NEH</a> to preserve and digitize the most at-risk items in the WGBH archival collection, specifically 83,000 media resources. This effort will preserve the archive we have built and ensure that future media assets are properly preserved as they are created. The grant calls for a 4:1 match, or $3 million in matching dollars over the next four years.
     </p>
