--- a/app/views/treasuries/bio.html.erb
+++ b/app/views/treasuries/bio.html.erb
@@ -22,7 +22,7 @@
         </div>
       </div> -->
 
-      <a align="right" class="treasury-bio-image-container" href="#">
+      <a align="right" class="treasury-bio-image-container">
         <img class="treasury-bio-image" src="https://s3.amazonaws.com/openvault.wgbh.org/treasuries/AndyAndLinda2.jpg">
       </a>
 
