--- a/app/views/treasuries/bio.html.erb
+++ b/app/views/treasuries/bio.html.erb
@@ -1,4 +1,4 @@
-<%= stylesheet_link_tag "locals/collectioncard.css" %>
+<%= stylesheet_link_tag "locals/treasurycard.css" %>
 <main class="container-fluid" role="main">
 
   <div class="row treasury-title">
